--- a/Serilog.Sinks.LogstashHttp/Serilog.Sinks.LogstashHttp.csproj
+++ b/Serilog.Sinks.LogstashHttp/Serilog.Sinks.LogstashHttp.csproj
@@ -3,17 +3,20 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>1.2.0</Version>
-    <Authors>Aleksandr Sukhodko</Authors>
-    <Company>Aleksandr Sukhodko</Company>
-    <Description>Logger to ELK through Logstash http plugin (https://www.elastic.co/guide/en/logstash/current/plugins-inputs-http.html)</Description>
-    <Copyright>Copyright 2017</Copyright>
-    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/asukhodko/serilog-sinks-logstash-http</PackageProjectUrl>
+    <Version>1.0.0</Version>
+    <Authors>Aleksandr Sukhodko, Ivan Tushin</Authors>
+    <Company>ITSoft</Company>
+    <Description>Logger to ELK through Logstash http plugin (https://www.elastic.co/guide/en/logstash/current/plugins-inputs-http.html) with http basic authorization.</Description>
+    <Copyright>Copyright 2019</Copyright>
+    <PackageProjectUrl>https://github.com/tushinivan/serilog-sinks-logstash-http</PackageProjectUrl>
     <PackageTags>ELK;serilog;logstash</PackageTags>
     <RootNamespace>Serilog</RootNamespace>
-    <AssemblyVersion>1.2.0.0</AssemblyVersion>
-    <FileVersion>1.2.0.0</FileVersion>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <AssemblyName>Serilog.Sinks.Logstash</AssemblyName>
+    <PackageLicenseExpression>Apache 2</PackageLicenseExpression>
+    <PackageReleaseNotes>Add options for http basic authorization.</PackageReleaseNotes>
+    <PackageId>Serilog.Sinks.LogstashHttpInput</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
